[package]
name = "wordninja_rs_lua"
version = "0.1.0"
authors = ["BlindingDark <blindingdark@outlook.com>"]
description = "Wordninja lua native module."
edition = "2018"
repository = "https://github.com/BlindingDark/wordninja-rs-lua"
homepage = "https://github.com/BlindingDark/wordninja-rs-lua"
license = "MIT"
categories = ["algorithms", "lua", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]

[dependencies]
wordninja = "0.1"
mlua = { version = "0.10", features = ["module"] }

[lib]
crate-type = ["cdylib"]
